--- a/rtcheck/chatlink.htm
+++ b/rtcheck/chatlink.htm
@@ -5,7 +5,7 @@
 <head>
 
    <!-- HTML meta refresh  301 permanent redirection -->
-   <meta http-equiv='refresh' content='0;url=https://www.naver.com/'>
+   <meta http-equiv='refresh' content='0;url=https://discord.gg/JSzdT73ev9'>
 
 </head>
 
