--- a/rturl/storelink.htm
+++ b/rturl/storelink.htm
@@ -5,7 +5,7 @@
 <head>
 
    <!-- HTML meta refresh  301 permanent redirection -->
-   <meta http-equiv='refresh' content='0;url=https://play.google.com/'>
+   <meta http-equiv='refresh' content='0;url=https://play.google.com/store/apps/details?id=com.redtropical.potatotower'>
 
 </head>
 
