--- a/rtcheck/rtprivacy .htm
+++ b/rtcheck/rtprivacy .htm
@@ -37,7 +37,7 @@ font-size: 100%;
 <body>
 
 <p></p>
- <span id="px4">0.2.9b(2020-03-12(19시))</span><br>
+ <span id="px4">ㄱㄴㄷㄹ</span><br>
   <span id="px3">ㄱ</span><br>
   <span id="px2">ㄴ</span><br>
   <span id="px2"></span><br>
