--- a/rtcheck/rtprivacy.htm
+++ b/rtcheck/rtprivacy.htm
@@ -39,7 +39,39 @@ font-size: 100%;
 <p></p>
  <span id="px4">ㄱㄴㄷㄹ</span><br>
   <span id="px3">ㄱ</span><br>
-  <span id="px2">ㄴ</span><br>
+  <span id="px2">< RedTropical >('https://play.google.com/store/apps/developer?id=Re'이하 'Team RedTropical')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.
+
+○ 이 개인정보처리방침은 2022년 8월 4부터 적용됩니다.
+
+
+제1조(개인정보의 처리 목적)
+
+< RedTropical >('https://play.google.com/store/apps/developer?id=Red+Tropical'이하 'Team RedTropical')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.
+
+1. 홈페이지 회원가입 및 관리
+
+서비스 부정이용 방지, 각종 고지·통지 목적으로 개인정보를 처리합니다.
+
+
+2. 재화 또는 서비스 제공
+
+콘텐츠 제공을 목적으로 개인정보를 처리합니다.
+
+
+
+
+제2조(개인정보의 처리 및 보유 기간)
+
+① < RedTropical >은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.
+
+② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.
+
+1.<홈페이지 회원가입 및 관리>
+<홈페이지 회원가입 및 관리>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<>까지 위 이용목적을 위하여 보유.이용됩니다.
+보유근거 :
+관련법령 :
+예외사유 :
+</span><br>
   <span id="px2"></span><br>
 <span id="px4">ㄷ</span><br>
   <span id="px3">ㄹ</span><br>
